fixed issues with the overlay

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </p>
       </div>
       <ul class="link-list-hidden">
-        <li>link 1</li>
-        <li>link 2</li>
-        <li>link 3</li>
-        <li>link 4</li>
+        <li>Home</li>
+        <li>About</li>
+        <li>Topics</li>
+        <li>Contact</li>
       </ul>
       <div class="menu-status-icon-container">
         <div class="hamburger-icon-container">
